--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-
-  <title>ChocoLux</title>
+  <link rel="icon" href="/images/seedling-solid.png" type="image/x-icon" />
+   <title>Affan's Market</title>
 
 
   <!-- bootstrap core css -->
