--- a/chocolate.html
+++ b/chocolate.html
@@ -13,8 +13,8 @@
   <meta name="author" content="" />
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
 
-  <title>ChocoLux</title>
-
+   <title>Affan's Market</title>
+   <link rel="icon" href="/images/seedling-solid.png" type="image/x-icon" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
