--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>ChocoLux</title>
+  <title>Affan's Market</title>
 
+  <link rel="icon" href="/images/seedling-solid.png" type="image/x-icon" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -68,7 +69,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="testimonial.html">Testimoni</a>
                 </li>
-                
+
               </ul>
               <div class="quote_btn-container">
                 <form class="form-inline">
