--- a/testimonial.html
+++ b/testimonial.html
@@ -12,9 +12,9 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>ChocoLux</title>
+   <title>Affan's Market</title>
 
-
+   <link rel="icon" href="/images/seedling-solid.png" type="image/x-icon" />
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <!--slick slider stylesheet -->
