--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <title>Affan's Market</title>
 
-  <link rel="icon" href="/images/seedling-solid.png" type="image/x-icon" />
+  <link rel="icon" href="/images/seedling-solid.png" type="image/png" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
