--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="icon" href="/images/seedling-solid.png" type="image/x-icon" />
+  <link rel="icon" href="/images/seedling-solid.png" type="image/png" />
+
    <title>Affan's Market</title>
 
 
