--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
 
    <title>Affan's Market</title>
-   <link rel="icon" href="/images/seedling-solid.png" type="image/x-icon" />
+<link rel="icon" href="/images/seedling-solid.png" type="image/png" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
