--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="icon" href="/images/seedling-solid.png" type="image/png" />
 
-   <title>Affan's Market</title>
+  <title>Affan's Market</title>
 
 
   <!-- bootstrap core css -->
@@ -45,7 +45,7 @@
       <header class="header_section">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.html" style="color: #307857;">
               Affan's Market
             </a>
             </a>
@@ -68,7 +68,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="testimonial.html">Testimoni</a>
                 </li>
-                
+
               </ul>
               <div class="quote_btn-container">
                 <form class="form-inline">
@@ -110,53 +110,50 @@
                   Mengapa harus memilih kami?
                 </h4>
                 <p>
-                  1. Kami bekerja sama dengan petani lokal dan pengecer sayuran terpercaya untuk memastikan ketersediaan
-                  sayuran
-                  segar berkualitas.
+                  1. Kami hanya menyediakan alat perabotan dengan kualitas terbaik.
+                  Produk-produk kami terbuat dari bahan berkualitas tinggi, dirancang dengan detail, dan tahan lama.
                 </p>
                 <p>
-                  2. Konsumen dapat mengunjungi situs web atau aplikasi mobile kami, memilih sayuran yang diinginkan,
-                  dan
-                  melakukan pembayaran secara online.
+                  2. Kami menawarkan beragam pilihan alat perabotan yang dapat memenuhi kebutuhan Anda. Baik itu perabotan untuk dapur, kamar tidur, ruang tamu, atau area lain di rumah Anda, kami memiliki berbagai pilihan yang dapat disesuaikan dengan selera dan gaya Anda.
                 </p>
                 <p>
-                  3. Setelah menerima pesanan, kami akan melakukan pengemasan yang hati-hati dan mengirimkannya melalui
-                  perusahaan
-                  logistik terpercaya.
+                  3.Kami mengutamakan desain yang menarik dan estetis pada produk-produk kami. Kami menyadari bahwa alat perabotan tidak hanya tentang fungsionalitas, tetapi juga tentang estetika. 
                 </p>
                 <p>
-                  4. Tim layanan pelanggan kami siap membantu dalam menangani pertanyaan atau masalah yang mungkin
-                  timbul.
+                  4. Kami mengutamakan kepuasan pelanggan. Tim kami siap membantu Anda dengan pertanyaan, permintaan, atau masalah apa pun yang Anda hadapi. Kami memberikan layanan pelanggan yang ramah, responsif, dan profesional untuk memastikan pengalaman belanja Anda yang menyenangkan.
                 </p>
               </section>
 
               <section>
-                <h4 class="mt-4">
+                <h4 class="mt-4 mb-3">
                   Keuntungan membeli disini
                 </h4>
                 <p>
-                  1. Akses mudah tanpa harus pergi ke pasar tradisional.
+                  1. Dengan membeli di toko online perabot ini, Anda dapat dengan mudah menjelajahi berbagai pilihan produk perabotan dari kenyamanan rumah Anda sendiri. 
                 </p>
                 <p>
 
-                  2. Sayuran segar, alami, dan berkualitas tinggi.
+                  2. Toko online perabot ini menyediakan berbagai macam produk perabotan untuk memenuhi kebutuhan Anda. Anda dapat menemukan beragam gaya, desain, dan ukuran perabotan yang sesuai dengan selera dan kebutuhan Anda.
                 </p>
 
                 <p>
-                  3. Proses pembelian yang mudah dan pengiriman yang cepat.
+                  3. Toko online perabot ini hanya menyediakan produk dengan kualitas terbaik. Setiap produk dipilih dengan teliti untuk memastikan keandalan dan daya tahan yang baik.
                 </p>
 
                 <p>
-                  4. Dukungan terhadap petani lokal dan ekonomi lokal.
+                  4.  Salah satu keuntungan membeli di toko online ini adalah Anda dapat memanfaatkan penawaran dan diskon menarik. Toko online sering kali menawarkan promo khusus, diskon, atau paket bundling yang dapat menghemat uang Anda.
+                </p>
+
+                <p>
+                  5. Layanan Pengiriman yang Cepat dan Aman: Toko online perabot ini menyediakan layanan pengiriman yang cepat dan aman. 
                 </p>
               </section>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="img-box">
-              <img
-                src="https://media.istockphoto.com/id/1247073860/id/foto/sayuran-organik-segar-yang-sehat-dalam-peti-yang-terisolasi-di-latar-belakang-putih.jpg?s=612x612&w=0&k=20&c=P2goNSau3Krbo2b9RvxYIMuUvzyqN9o-7Uv6y5ciHRg="
-                alt="">
+          <div class="col-md-6 ">
+            <div class="img-box  mt-5">
+              <img class="rounded rounded-2  d-flex align-items-center"
+                src="https://cdn.pixabay.com/photo/2014/01/02/19/44/tableware-237798_640.jpg" alt="">
             </div>
           </div>
         </div>
@@ -221,18 +218,20 @@
               </h4>
               <div class="insta_box">
                 <div class="img-box rounded rounded-2">
-                  <img src="images/insta-img.png" alt="">
+                  <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/780/0678078_PE719131_S3.jpg"
+                    alt="">
                 </div>
                 <p>
-                  Variant of vegetables
+                  Mangkok Putih
                 </p>
               </div>
               <div class="insta_box">
                 <div class="img-box rounded rounded-2">
-                  <img src="images/insta-img.png" alt="">
+                  <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/126/0712687_PE728972_S3.jpg"
+                    alt="">
                 </div>
                 <p>
-                  Vegetables that could last long
+                  Rak Gelas
                 </p>
               </div>
             </div>
