--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
         <div id="customCarousel1" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="w-100" src="images/mango.jpg" alt="">
+              <img class="w-100" style="width: 1429px; height: 577px;"
+                src="https://cdn.ruparupa.io/filters:format(webp)/promotion/ruparupa/highlight-kategori-lvl-1/170423/rumah-tangga/button-desktop.jpg"
+                alt="">
               <div class="container">
                 <div class="row">
                 </div>
@@ -99,7 +101,8 @@
             </div>
 
             <div class="carousel-item">
-              <img class="w-100" src="images/slider1_auto_x2_colored.jpg" alt="">
+              <img class="w-100" style="width: 1429px; height: 577px;"
+                src="https://down-ws-id.img.susercontent.com/id-11134210-7qukz-linz37ovz1izb2.webp" alt="">
               <div class="container">
                 <div class="row">
                 </div>
@@ -109,7 +112,7 @@
 
             <div class="carousel-item">
               <img class="w-100" style="width: 1429px; height: 577px;"
-                src="https://assets.segari.id/banners/it-2609TebusMurah-lj8i48yo-new-ljc9jgod.jpg" alt="">
+                src="https://static.jakmall.id/2022/01/images/banners/149257/original/Main%201.png" alt="">
               <div class="container">
                 <div class="row">
                 </div>
@@ -146,14 +149,16 @@
                 </h2>
               </div>
               <p>
-                Kami selalu menyediakan sayuran segar terbaik untuk pelanggan kami. Kami bekerja
-                sama dengan petani terpercaya dan menjaga standar kualitas yang tinggi untuk memastikan kepuasan Anda.
+                Kualitas produk yang unggul, kami hanya menyediakan alat perabotan dengan kualitas terbaik.
+                Produk-produk kami terbuat dari bahan berkualitas tinggi, dirancang dengan detail, dan tahan lama. Anda
+                dapat yakin bahwa alat perabotan yang Anda beli dari kami akan memberikan kinerja optimal dan tahan
+                lama.
                 <br>
                 <br>
 
-                Dengan layanan belanja sayur online kami, Anda dapat dengan mudah memilih dan
-                memesan sayuran favorit Anda dari kenyamanan rumah Anda. Tidak perlu repot pergi ke pasar atau toko
-                sayur tradisional.
+                Kami menawarkan beragam pilihan alat perabotan yang dapat memenuhi kebutuhan Anda. Baik itu perabotan
+                untuk dapur, kamar tidur, ruang tamu, atau area lain di rumah Anda, kami memiliki berbagai pilihan yang
+                dapat disesuaikan dengan selera dan gaya Anda.
               </p>
               <a href="about.html">
                 <span style="color: #307857;">
@@ -165,9 +170,8 @@
           </div>
           <div class="col-md-6">
             <div class="img-box">
-              <img
-                src="https://media.istockphoto.com/id/1247073860/id/foto/sayuran-organik-segar-yang-sehat-dalam-peti-yang-terisolasi-di-latar-belakang-putih.jpg?s=612x612&w=0&k=20&c=P2goNSau3Krbo2b9RvxYIMuUvzyqN9o-7Uv6y5ciHRg="
-                alt="">
+              <img class="rounded rounded-2"
+                src="https://cdn.pixabay.com/photo/2014/01/02/19/44/tableware-237798_640.jpg" alt="">
             </div>
           </div>
         </div>
@@ -186,8 +190,8 @@
             Produk Kami
           </h2>
           <p class="w-75">
-            Kami menawarkan berbagai macam sayuran dengan variasi jenis, ukuran, dan kualitas. Anda dapat menemukan
-            sayuran langka atau khas yang sulit ditemukan di tempat lain.
+            Kami yakin bahwa dengan memilih kami sebagai penjual alat perabotan terbaik, Anda akan mendapatkan
+            pengalaman belanja yang memuaskan.
           </p>
         </div>
       </div>
@@ -196,11 +200,10 @@
           <div class="box">
             <div class="img-box rounded-2">
               <img class="rounded-2 w-100" style="width: 200; height: 188px;"
-                src="https://media.istockphoto.com/id/641511766/id/foto/salad-selada-di-latar-belakang-putih.jpg?s=612x612&w=0&k=20&c=KxnJtH6Lxky_oam3SkzjtYX3x2vjC3Qep0ZySkLxCVs="
-                alt="">
+                src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/123/0712367_PE728786_S3.jpg" alt="">
             </div>
             <div class="detail-box rounded-1">
-              <h6>Sayur <span style="color: #1AF03E;">sawi</span></h6>
+              <h6>Piring <span style="color: #1AF03E;">Cantik</span></h6>
               <h5>Rp. 10.000</h5>
               <a href="">BELI</a>
             </div>
@@ -208,12 +211,10 @@
 
           <div class="box">
             <div class="img-box">
-              <img
-                src="https://media.istockphoto.com/id/545454816/id/foto/wortel-segar-terisolasi-di-latar-belakang-putih.jpg?s=612x612&w=0&k=20&c=Yy0bbfUmKHSYzg3CQlDGBZ25voGH7QUSyzEffJWUUb8="
-                alt="">
+              <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/111/0711128_PE727996_S3.jpg" alt="">
             </div>
             <div class="detail-box rounded-1">
-              <h6>Sayur <span style="color: #1AF03E;">Wortel</span></h6>
+              <h6>Gelas <span style="color: #1AF03E;">Mug</span></h6>
               <h5>Rp. 15.000</h5>
               <a href="">BELI</a>
             </div>
@@ -221,12 +222,10 @@
 
           <div class="box">
             <div class="img-box">
-              <img
-                src="https://media.istockphoto.com/id/183300149/id/foto/brokoli.jpg?s=612x612&w=0&k=20&c=o37Rlk3_2urTWur6qnZ-NLkfcQzU0xAAda79cOOMiTk="
-                alt="">
+              <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/116/0711691_PE728384_S3.jpg" alt="">
             </div>
             <div class="detail-box rounded-1">
-              <h6>Sayur <span style="color: #1AF03E;">brokoli</span></h6>
+              <h6>Pel <span style="color: #1AF03E;">Bolmen</span></h6>
               <h5>Rp. 25.000</h5>
               <a href="">BELI</a>
             </div>
@@ -249,7 +248,7 @@
             </h2>
             <h3>
               Dapatkan Diskon 10% <br>
-              pembelian Sayur apa saja
+              pembelian produk apa saja
             </h3>
             <a href="" class="bg-">
               Beli Sekarang
@@ -257,7 +256,7 @@
           </div>
           <div class="img-box">
             <img style="width: 564px; height: 380px;"
-              src="https://cdn.pixabay.com/photo/2017/04/03/13/38/fruits-2198378_1280.png" alt="">
+              src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/127/0712792_PE729062_S3.jpg" alt="">
           </div>
         </div>
         <div class="btn-box rounded-2">
@@ -279,8 +278,9 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <div class="img-box sub_img-box" style="width: 520px; height: 551px; ">
-              <img class="pr-5" src="https://cdn.pixabay.com/photo/2017/01/25/18/08/vegetables-2008578_640.png" alt="">
+            <div class="img-box sub_img-box d-flex align-items-center" style=" height: 600px; ">
+              <img class="pr-5 d-flex align-self-center" style=" height: 400px; "
+                src="https://cdn.pixabay.com/photo/2018/02/22/15/41/wood-3173282_640.jpg" alt="">
             </div>
           </div>
           <div class="col-lg-6 px-0">
@@ -302,11 +302,9 @@
                           Siti
                         </h4>
                         <p>
-                          Sebagai pelanggan setia dalam membeli sayuran secara online, saya ingin berbagi pengalaman
-                          positif saya dengan platform ini. Pertama-tama, saya sangat menghargai kebersihan dan kualitas
-                          sayuran yang diberikan. Semua sayuran selalu segar, terawat, dan bebas dari pestisida
-                          berbahaya. Selain itu, pilihan produk yang variatif membuat saya dapat menemukan berbagai
-                          jenis sayuran yang saya butuhkan untuk hidangan sehari-hari.
+                          Saya sangat senang dengan pengalaman pembelian alat rumah tangga secara online di situs Anda.
+                          Produk yang saya pesan tiba tepat waktu dan dalam kondisi sempurna. Kualitas alat rumah tangga
+                          yang saya beli sangat memuaskan, dan sesuai dengan deskripsi yang tertera di situs.
                         </p>
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                       </div>
@@ -315,19 +313,17 @@
                   <div class="carousel-item">
                     <div class="box">
                       <div class="img-box">
-                        <img style="width: 155px; height: 161px;"
-                          src="https://cdn.pixabay.com/photo/2020/05/09/13/29/photographer-5149664_1280.jpg" alt="">
+                        <img style="width: 155px; height: 161px;" src="images/client-img.jpg" alt="">
                       </div>
                       <div class="detail-box">
                         <h4>
                           Shanon
                         </h4>
                         <p>
-                          Selama berbelanja di sini, saya juga menghargai interaksi yang baik dengan tim layanan
-                          pelanggan. Mereka selalu siap membantu dan memberikan informasi yang jelas mengenai produk dan
-                          proses pembelian. Terakhir, harga yang kompetitif dan penawaran diskon yang sering ditawarkan
-                          membuat belanja sayuran online menjadi lebih terjangkau bagi saya. Saya merasa mendapatkan
-                          nilai yang baik untuk uang yang saya keluarkan.
+                          Layanan pelanggan yang diberikan juga sangat baik; tim Anda sangat responsif dan membantu
+                          menjawab semua pertanyaan dan permintaan saya dengan ramah. Saya merasa percaya diri dan
+                          nyaman berbelanja di situs Anda. Terima kasih atas pengalaman belanja yang menyenangkan dan
+                          produk berkualitas yang Anda berikan.
                         </p>
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                       </div>
@@ -344,10 +340,9 @@
                           Shaffan
                         </h4>
                         <p>
-                          Secara keseluruhan, saya sangat puas dengan pengalaman belanja sayuran online di sini. Saya
-                          merasa nyaman, terlayani dengan baik, dan mendapatkan produk berkualitas tinggi. Saya dengan
-                          senang hati merekomendasikan platform ini kepada semua orang yang mencari cara praktis dan
-                          aman untuk mendapatkan sayuran segar. Terima kasih atas pelayanan yang luar biasa!"
+                          "Ini adalah kali pertama saya membeli alat rumah tangga secara online, dan saya sangat puas
+                          dengan pengalaman tersebut. Situs web Anda memberikan antarmuka yang mudah digunakan dan
+                          navigasi yang lancar, sehingga saya dapat dengan mudah menemukan produk yang saya butuhkan.
                         </p>
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                       </div>
@@ -422,18 +417,20 @@
               </h4>
               <div class="insta_box">
                 <div class="img-box rounded rounded-2">
-                  <img src="images/insta-img.png" alt="">
+                  <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/780/0678078_PE719131_S3.jpg"
+                    alt="">
                 </div>
                 <p>
-                  Variant of vegetables
+                  Mangkok Putih
                 </p>
               </div>
               <div class="insta_box">
                 <div class="img-box rounded rounded-2">
-                  <img src="images/insta-img.png" alt="">
+                  <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/126/0712687_PE728972_S3.jpg"
+                    alt="">
                 </div>
                 <p>
-                  Vegetables that could last long
+                  Rak Gelas
                 </p>
               </div>
             </div>
