--- a/testimonial.html
+++ b/testimonial.html
@@ -12,9 +12,9 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-   <title>Affan's Market</title>
+  <title>Affan's Market</title>
 
-<link rel="icon" href="/images/seedling-solid.png" type="image/png" />
+  <link rel="icon" href="/images/seedling-solid.png" type="image/png" />
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <!--slick slider stylesheet -->
@@ -44,8 +44,8 @@
       <header class="header_section">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="index.html">
-              ChocoLux
+            <a class="navbar-brand" href="index.html" style="color: #307857;">
+              Affan's Market
             </a>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -67,9 +67,6 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="testimonial.html">Testimoni</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Hubungi Kami</a>
                   </li>
                 </ul>
                 <div class="quote_btn-container">
@@ -96,8 +93,9 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <div class="img-box sub_img-box" style="width: 520px; height: 551px; ">
-              <img class="pr-5" src="https://cdn.pixabay.com/photo/2017/01/25/18/08/vegetables-2008578_640.png" alt="">
+            <div class="img-box sub_img-box d-flex align-items-center" style=" height: 600px; ">
+              <img class="pr-5 d-flex align-self-center" style=" height: 400px; "
+                src="https://cdn.pixabay.com/photo/2018/02/22/15/41/wood-3173282_640.jpg" alt="">
             </div>
           </div>
           <div class="col-lg-6 px-0">
@@ -119,11 +117,9 @@
                           Siti
                         </h4>
                         <p>
-                          Sebagai pelanggan setia dalam membeli sayuran secara online, saya ingin berbagi pengalaman
-                          positif saya dengan platform ini. Pertama-tama, saya sangat menghargai kebersihan dan kualitas
-                          sayuran yang diberikan. Semua sayuran selalu segar, terawat, dan bebas dari pestisida
-                          berbahaya. Selain itu, pilihan produk yang variatif membuat saya dapat menemukan berbagai
-                          jenis sayuran yang saya butuhkan untuk hidangan sehari-hari.
+                          Saya sangat senang dengan pengalaman pembelian alat rumah tangga secara online di situs Anda.
+                          Produk yang saya pesan tiba tepat waktu dan dalam kondisi sempurna. Kualitas alat rumah tangga
+                          yang saya beli sangat memuaskan, dan sesuai dengan deskripsi yang tertera di situs.
                         </p>
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                       </div>
@@ -132,19 +128,17 @@
                   <div class="carousel-item">
                     <div class="box">
                       <div class="img-box">
-                        <img style="width: 155px; height: 161px;"
-                          src="https://cdn.pixabay.com/photo/2020/05/09/13/29/photographer-5149664_1280.jpg" alt="">
+                        <img style="width: 155px; height: 161px;" src="images/client-img.jpg" alt="">
                       </div>
                       <div class="detail-box">
                         <h4>
                           Shanon
                         </h4>
                         <p>
-                          Selama berbelanja di sini, saya juga menghargai interaksi yang baik dengan tim layanan
-                          pelanggan. Mereka selalu siap membantu dan memberikan informasi yang jelas mengenai produk dan
-                          proses pembelian. Terakhir, harga yang kompetitif dan penawaran diskon yang sering ditawarkan
-                          membuat belanja sayuran online menjadi lebih terjangkau bagi saya. Saya merasa mendapatkan
-                          nilai yang baik untuk uang yang saya keluarkan.
+                          Layanan pelanggan yang diberikan juga sangat baik; tim Anda sangat responsif dan membantu
+                          menjawab semua pertanyaan dan permintaan saya dengan ramah. Saya merasa percaya diri dan
+                          nyaman berbelanja di situs Anda. Terima kasih atas pengalaman belanja yang menyenangkan dan
+                          produk berkualitas yang Anda berikan.
                         </p>
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                       </div>
@@ -161,10 +155,9 @@
                           Shaffan
                         </h4>
                         <p>
-                          Secara keseluruhan, saya sangat puas dengan pengalaman belanja sayuran online di sini. Saya
-                          merasa nyaman, terlayani dengan baik, dan mendapatkan produk berkualitas tinggi. Saya dengan
-                          senang hati merekomendasikan platform ini kepada semua orang yang mencari cara praktis dan
-                          aman untuk mendapatkan sayuran segar. Terima kasih atas pelayanan yang luar biasa!"
+                          "Ini adalah kali pertama saya membeli alat rumah tangga secara online, dan saya sangat puas
+                          dengan pengalaman tersebut. Situs web Anda memberikan antarmuka yang mudah digunakan dan
+                          navigasi yang lancar, sehingga saya dapat dengan mudah menemukan produk yang saya butuhkan.
                         </p>
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                       </div>
@@ -226,21 +219,12 @@
                 Menu
               </h4>
               <div class="info_links_menu">
-                <a href="index.html">
-                  Home
+                <a class="nav-link" href="index.html">Beranda <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="about.html"> Tentang Kami</a>
                 </a>
-                <a href="about.html">
-                  About
-                </a>
-                <a href="chocolate.html">
-                  Chocolates
-                </a>
-                <a href="testimonial.html">
-                  Testimonial
-                </a>
-                <a href="contact.html">
-                  Contact us
-                </a>
+                <a class="nav-link" href="chocolate.html">Sayuran</a>
+                <a class="nav-link" href="testimonial.html">Testimoni</a>
+                <a class="nav-link" href="contact.html">Hubungi Kami</a>
               </div>
             </div>
           </div>
@@ -250,19 +234,21 @@
                 Instagram
               </h4>
               <div class="insta_box">
-                <div class="img-box">
-                  <img src="images/insta-img.png" alt="">
+                <div class="img-box rounded rounded-2">
+                  <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/780/0678078_PE719131_S3.jpg"
+                    alt="">
                 </div>
                 <p>
-                  long established fact that a reader
+                  Mangkok Putih
                 </p>
               </div>
               <div class="insta_box">
-                <div class="img-box">
-                  <img src="images/insta-img.png" alt="">
+                <div class="img-box rounded rounded-2">
+                  <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/126/0712687_PE728972_S3.jpg"
+                    alt="">
                 </div>
                 <p>
-                  long established fact that a reader
+                  Rak Gelas
                 </p>
               </div>
             </div>
@@ -270,35 +256,39 @@
           <div class="col-md-6 col-lg-3">
             <div class="info_detail">
               <h4>
-                Company
+                Pasar Kami
               </h4>
               <p class="mb-0">
-                when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                distribution of letters, as opposed to
+                Dengan layanan belanja sayur online kami, Anda dapat dengan mudah memilih dan
+                memesan sayuran favorit Anda dari kenyamanan rumah Anda. Tidak perlu repot pergi ke pasar atau toko
+                sayur tradisional.
               </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <h4>
-              Contact Us
+              Hubungi Kami
             </h4>
             <div class="info_contact">
-              <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span>
-                  Location
-                </span>
+              <a href="" class="align-self-baseline d-flex">
+                <div class="align-self-baseline d-flex">
+                  <i class="fa fa-map-marker" aria-hidden="true"></i>
+                  <iframe class="rounded rounded-2"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.49368223125!2d106.95143387490597!3d-6.330021093659569!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6992feabde95f9%3A0xaed132970624d274!2sJl.%20Batam%2C%20RT.001%2FRW.014%2C%20Jatisari%2C%20Kec.%20Jatiasih%2C%20Kota%20Bks%2C%20Jawa%20Barat%2017426!5e0!3m2!1sid!2sid!4v1688114217012!5m2!1sid!2sid"
+                    width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  +62 827182728
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope"></i>
                 <span>
-                  demo@gmail.com
+                  affansmarkat@gmail.com
                 </span>
               </a>
             </div>
