--- a/chocolate.html
+++ b/chocolate.html
@@ -45,8 +45,8 @@
       <header class="header_section">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="index.html">
-              ChocoLux
+            <a class="navbar-brand" href="index.html" style="color: #307857;">
+              Affan's Market
             </a>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -103,99 +103,74 @@
       </div>
       <div class="container">
         <div class="chocolate_container">
-          <div class="box ">
+          <div class="box">
             <div class="img-box rounded-2">
               <img class="rounded-2 w-100" style="width: 200; height: 188px;"
-                src="https://media.istockphoto.com/id/641511766/id/foto/salad-selada-di-latar-belakang-putih.jpg?s=612x612&w=0&k=20&c=KxnJtH6Lxky_oam3SkzjtYX3x2vjC3Qep0ZySkLxCVs="
-                alt="">
+                src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/123/0712367_PE728786_S3.jpg" alt="">
             </div>
             <div class="detail-box rounded-1">
-              <h6>
-                Sayur <span style="color: #1AF03E;">sawi</span>
-              </h6>
-              <h5>
-                Rp. 10.000
-              </h5>
-              <a href="">
-                BELI
-              </a>
-            </div>
-          </div>
-          <div class="box ">
-            <div class="img-box">
-              <img
-                src="https://media.istockphoto.com/id/545454816/id/foto/wortel-segar-terisolasi-di-latar-belakang-putih.jpg?s=612x612&w=0&k=20&c=Yy0bbfUmKHSYzg3CQlDGBZ25voGH7QUSyzEffJWUUb8="
-                alt="">
-            </div>
-            <div class="detail-box rounded-1">
-              <h6>
-                Sayur <span style="color: #1AF03E;">Wortel</span>
-              </h6>
-              <h5>
-                Rp. 15.000
-              </h5>
-              <a href="">
-                BELI
-              </a>
+              <h6>Piring <span style="color: #1AF03E;">Cantik</span></h6>
+              <h5>Rp. 10.000</h5>
+              <a href="">BELI</a>
             </div>
           </div>
 
-          <div class="box ">
+          <div class="box">
             <div class="img-box">
-              <img
-                src="https://media.istockphoto.com/id/183300149/id/foto/brokoli.jpg?s=612x612&w=0&k=20&c=o37Rlk3_2urTWur6qnZ-NLkfcQzU0xAAda79cOOMiTk="
-                alt="">
+              <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/111/0711128_PE727996_S3.jpg" alt="">
             </div>
             <div class="detail-box rounded-1">
-              <h6>
-                Sayur <span style="color: #1AF03E;">brokoli</span>
-              </h6>
-              <h5>
-                Rp. 25.000
-              </h5>
-              <a href="">
-                BELI
-              </a>
+              <h6>Gelas <span style="color: #1AF03E;">Mug</span></h6>
+              <h5>Rp. 15.000</h5>
+              <a href="">BELI</a>
             </div>
           </div>
 
-          <div class="box ">
+          <div class="box">
+            <div class="img-box">
+              <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/116/0711691_PE728384_S3.jpg" alt="">
+            </div>
+            <div class="detail-box rounded-1">
+              <h6>Pel <span style="color: #1AF03E;">Bolmen</span></h6>
+              <h5>Rp. 25.000</h5>
+              <a href="">BELI</a>
+            </div>
+          </div>
+
+          <div class="box">
             <div class="img-box rounded-2">
-              <img class="rounded-2 w-100"
-                src="https://media.istockphoto.com/id/1258142863/id/foto/tomat-mengisolasi-pada-latar-belakang-putih-tomat-setengah-terisolasi-tampilan-samping-tomat.jpg?s=612x612&w=0&k=20&c=EJT2_DQNbZpOOMoZQF4kCvbDSmH6a33jGw_SYgp6PZg="
-                alt="">
+              <img class="rounded-2 w-100" style="width: 200; height: 188px;"
+                src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/123/0712367_PE728786_S3.jpg" alt="">
             </div>
             <div class="detail-box rounded-1">
-              <h6>
-                Sayur <span style="color: #1AF03E;">Tomat</span>
-              </h6>
-              <h5>
-                Rp. 17.000
-              </h5>
-              <a href="">
-                BELI
-              </a>
+              <h6>Piring <span style="color: #1AF03E;">Cantik</span></h6>
+              <h5>Rp. 10.000</h5>
+              <a href="">BELI</a>
             </div>
           </div>
 
-          <div class="box ">
+          <div class="box">
             <div class="img-box">
-              <img
-                src="https://media.istockphoto.com/id/967491012/id/foto/utuh-dengan-irisan-mentimun-terisolasi-pada-latar-belakang-putih.jpg?s=612x612&w=0&k=20&c=YVqDfxMUP7HoC2McoO7MZhD3tqQE715pTNKJggMSttI="
-                alt="">
+              <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/111/0711128_PE727996_S3.jpg" alt="">
             </div>
             <div class="detail-box rounded-1">
-              <h6>
-                sayur <span style="color: #1AF03E;">Terong</span>
-              </h6>
-              <h5>
-                Rp. 8.000
-              </h5>
-              <a href="">
-                BELI
-              </a>
+              <h6>Gelas <span style="color: #1AF03E;">Mug</span></h6>
+              <h5>Rp. 15.000</h5>
+              <a href="">BELI</a>
             </div>
           </div>
+
+          <div class="box">
+            <div class="img-box">
+              <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/116/0711691_PE728384_S3.jpg" alt="">
+            </div>
+            <div class="detail-box rounded-1">
+              <h6>Pel <span style="color: #1AF03E;">Bolmen</span></h6>
+              <h5>Rp. 25.000</h5>
+              <a href="">BELI</a>
+            </div>
+          </div>
+          
 
 
         </div>
@@ -260,18 +235,18 @@
               </h4>
               <div class="insta_box">
                 <div class="img-box rounded rounded-2">
-                  <img src="images/insta-img.png" alt="">
+                  <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/780/0678078_PE719131_S3.jpg" alt="">
                 </div>
                 <p>
-                  Variant of vegetables
+                  Mangkok Putih
                 </p>
               </div>
               <div class="insta_box">
                 <div class="img-box rounded rounded-2">
-                  <img src="images/insta-img.png" alt="">
+                  <img src="https://d2xjmi1k71iy2m.cloudfront.net/dairyfarm/id/images/126/0712687_PE728972_S3.jpg" alt="">
                 </div>
                 <p>
-                  Vegetables that could last long
+                  Rak Gelas
                 </p>
               </div>
             </div>
